<resources>
    <string name="app_name">Computer Monitor</string>
    <string name="dialog_please_wait">Please wait ...</string>
    <string name="dialog_try_to_connect">Try to connect ...</string>
    <string name="chooser_empty">No connections in history</string>
    <string name="text_volume_control">Volume</string>
    <string name="scanner_qr">Scan QR-Code</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_save_password">Store password</string>
    <string name="unkown_error">Unkown error</string>
    <string name="login_wrong">Wrong username / password</string>
    <string name="unkown_network_error">Unkown network error</string>
    <string name="login_register_failed">User already exist</string>
    <string name="activitiy_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="card_last_used">Last used:</string>
    <string name="access_denied">Session timed out</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure to logout?</string>
    <string name="dialog_logout_positiv">Logout</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_session_timed_out_title">Session timed out</string>
    <string name="dialog_session_timed_out_message">You will loged out automatically</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="empty_device_data">No data existing yet for this device</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_remote">Remote connection</string>
    <string name="menu_logout">Logout</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="menu_delete_remote_history">Delete remote history</string>
    <string name="dialog_delete_history_title">Delete history</string>
    <string name="dialog_delelte_history_message">Are you sure to delete the history of remote connections?</string>
    <string name="dialog_delete_history_positiv">Delete</string>
    <string name="delete_device_successful">Device successfully deleted</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_device_dialog_message">Are you sure to delte this device? It can\'t be undo!</string>
    <string name="delete_dialog_positiv">Delete</string>
    <string name="no_device">No device on this account</string>
    <string name="menu_policy">Privacy policy</string>
</resources>
